# NoGameFoundClient

./: .gitignore  README.md
NoGameFoundClient/: Form1.Designer.cs  Form1.cs
client/: NoGameFoundClient.sln
client/Assets/: ServerLogic.cs
client/Game_Data/: globalgamemanagers  globalgamemanagers.assets  level0  sharedassets0.assets  sharedassets0.assets.resS
client/NoGameFoundClient/: Form1.Designer.cs  Form1.cs  Form1.resx  NoGameFoundClient.csproj  Program.cs  ServerConnectionThread.cs
client/ProjectSettings/: InputManager.asset  Physics2DSettings.asset  TagManager.asset
client/Temp/: UnityTempFile-056c6b3eec76156fcb2f471f80296d79  UnityTempFile-091382c6d8ba417eebbe361e3d1b00d2  UnityTempFile-11896780090b3857da2cc68311535368  UnityTempFile-15e9390819c6924ff9a79c7c39c0e80d  UnityTempFile-234cbf829ee9449738d8a13d0227818e  UnityTempFile-2caee3c2999d0e551825c87203469a75  UnityTempFile-33f177f6b1603257d8e9aaa1fe7c203c  UnityTempFile-47f987f6a513dbb888ba19f9a7061c25  UnityTempFile-4d37cc7dc9a983669ad01e6737607c78  UnityTempFile-4e1ebcbcc9483bad08528cd6567fd27f  UnityTempFile-4e24702cd72251fb1b6c2a9efdf47cac  UnityTempFile-541e43e1cb78ad3419e69a4465d9b0f6  UnityTempFile-5aced7362331ca522a6d46904be9a619  UnityTempFile-5c163fcce21d1037396469ff6672cdf5  UnityTempFile-5f84847860525c7e7b832bad24f0e97b  UnityTempFile-6bb0bb0edf595206bbde338ecf9df9c9  UnityTempFile-6d38f3a3133b0525cbc617c0e9d43c32  (+20 more)
server/: CMakeLists.txt  SQL_Conn.c  SQL_Conn.h  Structs.h  TCP_Server.c  TCP_Server.h  UserListUtils.c  UserListUtils.h  database.sql  server.c  server2.c  test.c
(+47 files in other folders)
